--- a/nieruchomości/Views/Home/_ShowLand.cshtml
+++ b/nieruchomości/Views/Home/_ShowLand.cshtml
@@ -1,9 +1,24 @@
-﻿@using nieruchomości.Helpers
+﻿@using System.Web.Optimization
+@using nieruchomości.Helpers
 @model Models.ViewModels.ShowLand
 
 @{
     ViewBag.Title = "ShowFlat";
 }
+
+
+<script src="~/Scripts/jquery-1.10.2.js"></script>
+<script src="~/Scripts/modalform.js"></script>
+
+@*modal fade in function*@
+<div id='myModal' class='modal fade in'>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div id='myModalContent'></div>
+        </div>
+    </div>
+</div>
+
 <div class="row" style="margin-right: 15px">
     <div class="col-md-12 custom-center-panel" style="margin-left: 15px">
         @if (!Model.Visible)
@@ -47,6 +62,11 @@
                     <div class="row custom-advert-price">
                         <div class="col-md-5">Cena:</div>
                         <div class="col-md-7">@Model.Price zł</div>
+                    </div>
+                    <div class="panel-body ">
+                        @Html.ActionLink("Kalkulator opłat dodatkowych", "CalcView", "Home",
+                            new { viewPrice = Model.Price, viewOwnershipForm = Model.Ownership },
+                            new { data_modal = "", id = "btnCreate", @class = "btn btn-sm btn-info center-block " })
                     </div>
                 </div>
             </div>
@@ -143,8 +163,13 @@
 <script src="/Scripts/jquery-1.10.2.js"></script>
 
 <script language="javascript">
-    $(".small-pict").on("click", function () {
+    $(".small-pict").on("click", function() {
         var link = $(this).prop("src");
         $(".custom-head-photo").prop("src", link);
     });
 </script>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/modalform")
+}
