--- a/nieruchomości/Views/Shared/_Layout.cshtml
+++ b/nieruchomości/Views/Shared/_Layout.cshtml
@@ -4,11 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Nieruchomości ;)</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css"/>
     <link href="~/Content/ng-grid.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+<meta name="description" content="The description of my page" />
 </head>
 <body>
 <div class="container body-content">
