--- a/nieruchomości/Views/Home/_ShowHouse.cshtml
+++ b/nieruchomości/Views/Home/_ShowHouse.cshtml
@@ -1,4 +1,5 @@
-﻿@using nieruchomości.Helpers
+﻿@using System.Web.Optimization
+@using nieruchomości.Helpers
 @model Models.ViewModels.ShowHouse
 
 @{
