--- a/nieruchomości/Views/Admin/Settings.cshtml
+++ b/nieruchomości/Views/Admin/Settings.cshtml
@@ -85,7 +85,7 @@
             }
             </tbody>
 
-            @Html.ActionLink("Dodaj nowe ustawienie", "AddSetting", "Admin", new { @class = "btn btn-info btn-xs" })
+            @Html.ActionLink("Dodaj nowe przedział taksy notarialnej", "AddSetting", "Admin", new { @class = "btn btn-info btn-xs" })
         </table>
 
         <br>
