--- a/nieruchomości/Views/Admin/AddSetting.cshtml
+++ b/nieruchomości/Views/Admin/AddSetting.cshtml
@@ -1,8 +1,10 @@
-﻿@model Models.EntityModels.Clat
+﻿@using Models.EntityModels
+@model Models.EntityModels.Clat
 
 @{
     ViewBag.Title = "AddSettings";
-}
+
+    }
 
 <div class="row" style="margin-right: 15px">
     <div class="col-md-12 custom-center-panel" style="margin-left: 15px">
